fix: adjust contact section layout to prevent overlap on wide screens

--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -10,11 +10,9 @@
   margin: 0;
 }
 .contact-flex {
-  width: 100%;
   display: flex;
-  margin-left: -80px;
-  padding-right: 120px;
-  position: relative;
+  justify-content: flex-start;
+  gap: 200px;
 }
 .contact-flex h4 {
   font-weight: 500;
@@ -22,12 +20,8 @@
   opacity: 0.6;
 }
 .contact-box {
-  padding: 80px;
   display: flex;
   flex-direction: column;
-  width: 700px;
-  box-sizing: border-box;
-  flex-shrink: 0;
 }
 .contact-flex p {
   margin-top: 10px;
@@ -64,16 +58,6 @@ a.contact-social {
     font-size: 22px;
   }
 }
-@media only screen and (max-width: 1400px) {
-  .contact-box {
-    width: 350px;
-    padding: 30px;
-  }
-  .contact-flex {
-    margin-left: -30px;
-    padding-right: 45px;
-  }
-}
 @media only screen and (max-width: 1300px) {
   .contact-section h3 {
     font-size: 40px;
@@ -92,12 +76,6 @@ a.contact-social {
   .contact-flex {
     flex-direction: column;
     gap: 40px;
-    padding-right: 0;
-    margin-left: 0;
-  }
-  .contact-box {
-    width: 100%;
-    padding: 0;
   }
   .contact-flex p {
     margin-bottom: 0px;
